src/css/shared.less
header.splash {
  max-width: 1200px;
  margin: auto;
  
  img {
    width: 100%;
  }

  & > h1 {
    display: block;
    margin: auto;
    max-width: 800px;
    padding: 32px 0 16px;

    @media @mobile {
      padding: 16px;
    }
  }
}

//byline style 
.byline {
  font-size: 18px;
  max-width: 800px;
  margin: auto;
  padding-top: 20px;


  @media @tablet {
    padding: 0 16px;

  }

  @media @mobile {
    padding: 0 16px;

  }

  .staff {
    font-style: italic;
    font-size: 16px;
  }

  .date {
    font-size: 16px;
    font-family: @df-sans;
    color: @df-dark-gray;
  }
}

main.article-content {
  margin: auto;
  max-width: 800px;
  overflow: hidden;
  position: relative;

  & > p {
    max-width: 610px;
  }

  @media @mobile {
    padding:16px;
  }

  @media @tablet {
    padding: 16px;
  }

  & > h2 {
    font-family: @df-serif;
    font-size: 40px;
    text-align: center;
    font-weight: bold;
    max-width: 610px;
    padding-top: 30px;
    text-transform: uppercase;

    @media @mobile {
      font-size: 30px;
      padding-top: 20px;
    }

  }

  hr {
  margin-top: 15px;
  margin-bottom: 15px;
}

  .lift {

  font-size: 27px;
  font-weight: thin;
  font-style: italic;
  color: @df-middle-gray;
  }
}

footer {
  clear: both;
}

.inline-nav {
  float: right;
  max-width: 240px;
  margin: 0 16px 32px;
  font-family: @df-sans;

  @media @mobile {
    float: none;
    max-width: 100%;
    width: 100%;
    margin: 20px auto;
    padding: 20px 10px;
    border-color: @df-light-gray;
    border-style: solid;
    border-width: 1px 0;
    text-align: center;
  }

  ul {
    padding-left: 0px;
    font-size: 16px;
    list-style-type: none;
    margin: 0;

    li {
      padding-top: 5px;
      padding-bottom: 5px;
      border-bottom: .5px solid;
      border-color: @df-light-gray;
      color: @df-middle-gray;

      @media @mobile {
        display: inline-block;
        border-bottom: none;
        margin-right: 16px;
        text-decoration: underline;
      }

      a {
        font-size: 16px;
        color: @df-charcoal;

        &:hover {
          color: @df-blue;
        }
      }
    }

  }

  h3 {
    margin-top: 0px;
    margin-bottom: 10px;
  }
}

// inline photo styles

.quote-photo {
  padding-top: 35px;
  padding-bottom: 35px;

  @media @mobile {
    padding-top: 25px;
    padding-bottom: 25px;
  }
}

.pullquote {
  font-family: @df-sans;
  font-size: 25px;
  font-weight: bold;
  text-align: center;
  padding-bottom: 10px;

  @media @tablet {
    font-size: 23px;
  }

  @media @mobile {
    font-size: 20px;
  }

  .attribution {
    font-size: 20px;
    font-family: @df-sans;
    padding-bottom: 10px;
    font-weight: normal;

    @media @tablet {
      font-size: 17px;
    }

    @media @mobile {
      font-size: 15px;
    }
  }

  &.opening {
    margin-top: 40px;
    font-size: 20px;

    .attribution {
      font-size: 16px;
    }
  }
}

// trying to get correct styling for quote to go off to the side
blockquote {
  float: right;
  width: 300px;

  @media @mobile {
    float: none;
    width: 100%;
  }
}

.photo {
  max-width: 1200px;
  margin: auto;

  .credit {
    text-align: right;
    font-family: @df-sans;
    font-size: 13px;
    margin-left: 20px;
    font-style: italic;
    text-transform: uppercase;
    color: @df-dark-gray;
    padding: 0 16px;
  }

  .caption {
    display: block;
    padding: 0 16px;
    margin: 0;
    font-family: @df-sans;
    font-size: 16px;
    max-width: 100%;
  }

  &.section {
    padding-top: 50px;

    @media @tablet {
      padding-top: 25px;
    }

    @media @mobile {
      padding-top: 15px;
    }
  }
}

.side-img{
  float: right;
  width: 300px;
  height: auto;
  padding: 20px;

  .credit, .caption {
    padding: 0;
  }

  @media @mobile {
    float: none;
    max-width: 100%;
    width: 100%;
    margin: 0px;
    padding: 20px 0px;
  }
}

.dev.credits {
  text-align: right;
  max-width: 800px;
  margin: auto;
  padding: 20px 0;
  font-size: 15px;
  font-family: @df-sans;
}

.next-page {
  .display-flex();
  border-width: 0;
  border-top-width: 1px;
  border-bottom-width: 1px;
  border-color: @df-light-gray;
  border-style: solid;
  margin: 20px auto;
  max-width: 800px;

  .block {
    padding: 20px;
    text-align: center;
    .flex(0 0 50%);

    &:hover {
      background: @df-off-white;
    }

    &.previous {
      border-right: 1px solid @df-light-gray;
    }
  }

  a {
    color: @df-blue;
    font-family: @df-sans;
  }

  .next a::after {
    content: "»";
    padding: 0 8px;
  }

  .previous a::before {
    content: "«";
    padding: 0 8px;
  }
}

.ad[data-type="square"] {
  float: right;
  margin: 10px;
}

.video-container {
  position: relative;

  &::before {
    display: block;
    content: "";
    padding-bottom: percentage(9 / 16);
  }

  iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

